--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -47,9 +47,10 @@ id="todo"
     </form>
         <div ng-repeat="question in questions | filter:{isActive__c:'true'}">
           <input type="text" ng-model="question.Question__c" ng-required="true"></input>
-          {{question.Order__c}}
-          <input type="checkbox" ng-model="question.isActive__c"></input>
-          {{question.isActive__c}}
+          Order: {{question.Order__c}}
+          <input type="checkbox" ng-model="question.Required__c"></input>
+          Required? : {{question.Required__c}}
+          <input type="button" value="Delete" ng-click="deleteChecklistItem(question)"></input>
       </div>
               <input type="button" value="+" ng-click="addQuestionEdit()"></input>
 
@@ -73,7 +74,7 @@ checklistApp.controller("AdminCtrl", function ($scope) {
     $scope.checklist.name = 'Default Name';
     $scope.checklist.description = 'Default Description';
     $scope.checklists = {!CheckLists};
-    $scope.item = $scope.checklists[3];
+    $scope.item = $scope.checklists[0];
     $scope.types = ['Yes/No', 'Number', 'Text', 'Date','Long Text', 'Rating', 'Picklist', 'Multi-Select'];
     $scope.newChecklist = function() {
      if ($scope.newChecklistForm.$valid) {
@@ -150,13 +151,19 @@ $scope.editChecklist = function() {
         }, {escape: true}
         );
 };
+$scope.deleteChecklistItem = function(item) {
+    console.log(item);
+    item.isActive__c = false;
+}
 $scope.getChecklistItems = function() {
     delete $scope.item.attributes;
+    console.log($scope.item);
     Visualforce.remoting.Manager.invokeAction(
         '{!$RemoteAction.ChecklistAdminController.getChecklistItems}',
         $scope.item,
         function(result, event) {
             if(event.status) {
+                console.log(result);
                 $scope.questions = result;
                 $scope.$apply();
             } else if (event.type == 'exception') {
