--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -74,13 +74,9 @@ checklistApp.controller("AdminCtrl", function ($scope) {
     $scope.checklist.name = 'Default Name';
     $scope.checklist.description = 'Default Description';
     $scope.checklists = {!CheckLists};
-<<<<<<< HEAD
     $scope.item = $scope.checklists[0];
     $scope.types = ['Yes/No', 'Number', 'Text', 'Date','Long Text', 'Rating', 'Picklist', 'Multi-Select'];
-=======
     $scope.ittypesem = $scope.checklists[3];
-    $scope. = ['Yes/No', 'Number', 'Text', 'Date','Long Text', 'Rating', 'Picklist', 'Multi-Select'];
->>>>>>> 14e634b4f61e70a2dd0c43b4ff3273c23301b34c
     $scope.newChecklist = function() {
      if ($scope.newChecklistForm.$valid) {
         $scope.createChecklist();
@@ -117,6 +113,9 @@ $scope.addQuestionEdit = function() {
     var item = {isActive__c : true, Order__c: $scope.questions.length + 1}
     $scope.questions.push(item);
     console.log($scope.questions.length);
+}
+$scope.showValues = function(item) {
+    return (item.Type__c == 'Rating') || (item.Type__c == 'Picklist') || (item.Type__c == 'Multi-Select');
 }
 $scope.removeQuestion = function() {
     $scope.items.pop();
